--- a/sample.uvprojx
+++ b/sample.uvprojx
@@ -419,6 +419,21 @@
               <FileType>5</FileType>
               <FilePath>.\game_logic.h</FilePath>
             </File>
+            <File>
+              <FileName>coloring.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\coloring.c</FilePath>
+            </File>
+            <File>
+              <FileName>coloring.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\coloring.h</FilePath>
+            </File>
+            <File>
+              <FileName>constants.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\constants.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
